examples/invalid/syntaxErr/for/foErr.wacc
# for typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  fo (int x = 1, x < 10, x = x + 1)
    skip
  done
end